Fix forbiddenApis failure
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>